Prepare for new release sqsh-2.1.8

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,6 +3,7 @@
 #
 
 prefix         = @prefix@
+datarootdir    = @datarootdir@
 src_dir        = @srcdir@
 exec_prefix    = @exec_prefix@
 bin_dir        = @bindir@
