sqsh-2.3 new features and bugfixes

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -81,4 +81,11 @@
  */
 #undef SYSV_SIGNALS
 
+/*
+ * sqsh-2.3 : Test availability of locale
+ */
+#undef HAVE_LOCALE_H
+#undef HAVE_LOCALECONV
+#undef HAVE_SETLOCALE
+
 #endif
